SERVER-35113 Allow single voting primaries to advance stable timestamp even when last applied does not advance